fix: updated sam config.toml for enviromental deployments

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -8,15 +8,22 @@ parallel = true
 lint = true
 
 [default.deploy.parameters]
-capabilities = "CAPABILITY_IAM"
+capabilities = "CAPABILITY_IAM CAPABILITY_AUTO_EXPAND"
 confirm_changeset = true
 resolve_s3 = true
+s3_prefix = "banking-app"
 stack_name = "banking-app"
 
+[default.package.parameters]
+resolve_s3 = true
 
 # --- Production Environment ---
-[prod.deploy.parameters]
-s3_prefix = "banking-app/prod"
+[prod]
+[prod.global]
+[prod.global.parameters]
+capabilities = "CAPABILITY_IAM CAPABILITY_AUTO_EXPAND"
+s3_prefix = "banking-app-prod"
+resolve_s3 = true
 stack_name = "banking-app-prod"
 region = "eu-west-2"
 parameter_overrides=[
@@ -24,8 +31,12 @@ parameter_overrides=[
 ]
 
 # --- Development Environment ---
-[dev.deploy.parameters]
-s3_prefix = "banking-app/dev"
+[dev]
+[dev.global]
+[dev.global.parameters]
+capabilities = "CAPABILITY_IAM CAPABILITY_AUTO_EXPAND"
+s3_prefix = "banking-app-dev"
+resolve_s3 = true
 stack_name = "banking-app-dev"
 region = "eu-west-2"
 parameter_overrides=[
@@ -33,8 +44,12 @@ parameter_overrides=[
 ]
 
 # --- Testing Environment ---
-[test.deploy.parameters]
-s3_prefix = "banking-app/test"
+[test]
+[test.global]
+[test.global.parameters]
+capabilities = "CAPABILITY_IAM CAPABILITY_AUTO_EXPAND"
+s3_prefix = "banking-app-test"
+resolve_s3 = true
 stack_name = "banking-app-test"
 region = "eu-west-2"
 parameter_overrides=[
