--- a/template.yml
+++ b/template.yml
@@ -65,10 +65,11 @@ Resources:
 
   RecordTransactionFunctionLogGroup:
     Type: AWS::Logs::LogGroup
-    DeletionPolicy: Retain
-    UpdateReplacePolicy: Retain
+    DeletionPolicy: Delete
+    UpdateReplacePolicy: Delete
     Properties:
       LogGroupName: !Sub /aws/lambda/${RecordTransactionFunction}
+      RetentionInDays: 7
 
   # --- DynamoDB Table for Transactions ---
   TransactionsTable:
