--- a/.github/workflows/validate-and-lint-sam.yml
+++ b/.github/workflows/validate-and-lint-sam.yml
@@ -20,7 +20,10 @@ jobs:
         - name: Upgrade pip and install dependencies
           run: |
             python -m pip install --upgrade pip
-            pip install aws-sam-cli
+            pip install aws-sam-cli cfn-lint
 
         - name: Validate SAM Template
           run: sam validate --lint
+
+        - name: Lint cloudformation using cfn-lint
+          run: cfn-lint template.yml
