--- a/.github/workflows/destroy-infrastructure.yml
+++ b/.github/workflows/destroy-infrastructure.yml
@@ -28,10 +28,6 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    env:
-      AWS_DEFAULT_REGION: "eu-west-2"
-      TARGET_SAM_CONFIG_ENV: ${{ github.event.inputs.target_environment }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -60,7 +56,7 @@ jobs:
 
       - name: Display Target for Deletion
         run: |
-          echo "Attempting to delete infrastructure for SAM config environment: ${{ env.TARGET_SAM_CONFIG_ENV }}"
+          echo "Attempting to delete infrastructure for SAM config environment: ${{ steps.sam_env.outputs.sam_config_name }}"
           echo "This corresponds to GitHub Environment: ${{ github.event.inputs.target_environment }}"
 
       - name: Destroy Infrastructure
