--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,8 +1,9 @@
 aws_lambda_powertools==3.12.0
 boto3==1.38.13
 pytest==8.3.5
-moto==5.1.4
+moto==5.1.6
+responses==0.25.7
 joserfc==1.1.0
 pytest-mock==3.14.1
 PyJWT==2.10.1
-requests==2.32.3
+requests==2.32.4
