--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,4 @@
 filterwarnings =
     ignore::DeprecationWarning:botocore.*
 testpaths = tests
-pythonpath = layers/python/helpers
+pythonpath = layers/python/helpers layers/python/accounts
