--- a/template.yml
+++ b/template.yml
@@ -67,6 +67,8 @@ Resources:
         RecoveryMechanisms:
           - Name: verified_email
             Priority: 1
+      LambdaConfig:
+        PostConfirmation: !GetAtt CognitoPostSignUpFunction.Arn
 
   BankingUserPoolClient:
     Type: AWS::Cognito::UserPoolClient
@@ -174,12 +176,49 @@ Resources:
               - cognito-idp:AdminRespondToAuthChallenge
             Resource: !GetAtt BankingUserPool.Arn
 
+  CognitoPostSignUpFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: !Sub ${AWS::StackName}-cognito-post-sign-up-function
+      Description: !Sub
+        - Stack ${AWS::StackName} Function ${ResourceName} for Stage ${Environment}
+        - ResourceName: CognitoPostSignUpFunction
+      CodeUri: functions/cognito/post_sign_up/
+      Handler: post_sign_up.app.lambda_handler
+      Environment:
+        Variables:
+          ACCOUNTS_TABLE_NAME: !Ref AccountsTable
+          DYNAMODB_ENDPOINT: ''
+      Layers:
+        - !Ref PythonHelpersLambdaLayer
+        - !Ref PythonAccountsLambdaLayer
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: !Ref AccountsTable
+        - Statement:
+            - Effect: Allow
+              Action:
+                - ses:SendEmail
+                - ses:SendRawEmail
+              Resource: '*'
+
   # --- Lambda Layers ---
   PythonHelpersLambdaLayer:
     Type: AWS::Serverless::LayerVersion
     Properties:
       LayerName: !Sub ${AWS::StackName}-banking-python-helpers-layer
       ContentUri: layers/python/helpers
+      CompatibleRuntimes:
+        - python3.12
+    Metadata:
+      BuildMethod: python3.12
+      BuildArchitecture: x86_64
+
+  PythonAccountsLambdaLayer:
+    Type: AWS::Serverless::LayerVersion
+    Properties:
+      LayerName: !Sub ${AWS::StackName}-banking-python-accounts-layer
+      ContentUri: layers/python/accounts
       CompatibleRuntimes:
         - python3.12
     Metadata:
@@ -201,6 +240,15 @@ Resources:
     UpdateReplacePolicy: Delete
     Properties:
       LogGroupName: !Sub /aws/lambda/${AuthFunction}
+      RetentionInDays: 7
+
+
+  CognitoPostSignUpFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    DeletionPolicy: Delete
+    UpdateReplacePolicy: Delete
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${CognitoPostSignUpFunction}
       RetentionInDays: 7
 
   # --- DynamoDB Table for Transactions ---
@@ -231,6 +279,35 @@ Resources:
       TimeToLiveSpecification:
         AttributeName: ttlTimestamp
         Enabled: true
+        
+  # --- DynamoDB Table for Accounts ---
+  AccountsTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: !Sub ${AWS::StackName}-accounts-table
+      KeySchema:
+        - AttributeName: accountId
+          KeyType: HASH
+      AttributeDefinitions:
+        - AttributeName: accountId
+          AttributeType: S
+      BillingMode: PAY_PER_REQUEST
+      PointInTimeRecoverySpecification:
+        PointInTimeRecoveryEnabled: true
+      SSESpecification:
+        SSEEnabled: true
+      TimeToLiveSpecification:
+        AttributeName: ttlTimestamp
+        Enabled: true
+
+  # --- Permissions ---
+  CognitoPostSignUpFunctionPermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      FunctionName: !Ref CognitoPostSignUpFunction
+      Action: lambda:InvokeFunction
+      Principal: cognito-idp.amazonaws.com
+      SourceArn: !GetAtt BankingUserPool.Arn
 
   # Domain Configuration
   ApiCertificate:
