--- a/template.yml
+++ b/template.yml
@@ -135,6 +135,45 @@ Resources:
         - DynamoDBCrudPolicy:
             TableName: !Ref TransactionsTable
 
+  GetTransactionsFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: !Sub ${AWS::StackName}-get-transactions
+      Description: !Sub
+        - Stack ${AWS::StackName} Function ${ResourceName} for Stage ${Environment}
+        - ResourceName: GetTransactionFunction
+      CodeUri: functions/get_transactions/
+      Handler: get_transactions.app.lambda_handler
+      Environment:
+        Variables:
+          TRANSACTIONS_TABLE_NAME: !Ref TransactionsTable
+          DYNAMODB_ENDPOINT: ''
+          COGNITO_USER_POOL_ID: !Ref BankingUserPool
+          COGNITO_CLIENT_ID: !Ref BankingUserPoolClient
+      Layers:
+        - !Ref PythonHelpersLambdaLayer
+        - !Ref PythonAuthenticationLambdaLayer
+      Events:
+        ApiGetAllTransactionsEvent:
+          Type: Api
+          Properties:
+            Path: /transactions
+            Method: GET
+            RestApiId: !Ref BankingApiGateway
+            Auth:
+              Authorizer: CognitoAuthorizer
+        ApiGetTransactionByIdEvent:
+          Type: Api
+          Properties:
+            Path: /transactions/{id}
+            Method: GET
+            RestApiId: !Ref BankingApiGateway
+            Auth:
+              Authorizer: CognitoAuthorizer
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: !Ref TransactionsTable
+
   ProcessTransactionsFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -318,6 +357,14 @@ Resources:
       LogGroupName: !Sub /aws/lambda/${ProcessTransactionsFunction}
       RetentionInDays: 7
 
+  GetTransactionsFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    DeletionPolicy: Delete
+    UpdateReplacePolicy: Delete
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${GetTransactionsFunction}
+      RetentionInDays: 7
+
   CognitoPostSignUpFunctionLogGroup:
     Type: AWS::Logs::LogGroup
     DeletionPolicy: Delete
@@ -339,6 +386,8 @@ Resources:
           AttributeType: S
         - AttributeName: id
           AttributeType: S
+        - AttributeName: userId
+          AttributeType: S
       BillingMode: PAY_PER_REQUEST
       PointInTimeRecoverySpecification:
         PointInTimeRecoveryEnabled: true
@@ -348,6 +397,12 @@ Resources:
         - IndexName: TransactionIdIndex
           KeySchema:
             - AttributeName: id
+              KeyType: HASH
+          Projection:
+            ProjectionType: ALL
+        - IndexName: UserIdIndex
+          KeySchema:
+            - AttributeName: userId
               KeyType: HASH
           Projection:
             ProjectionType: ALL
