--- a/template.yml
+++ b/template.yml
@@ -229,6 +229,45 @@ Resources:
               - sqs:GetQueueUrl
             Resource: !GetAtt TransactionProcessingDLQ.Arn
 
+  GetAccountsFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: !Sub ${AWS::StackName}-get-accounts
+      Description: !Sub
+        - Stack ${AWS::StackName} Function ${ResourceName} for Stage ${Environment}
+        - ResourceName: GetAccountsFunction
+      CodeUri: functions/accounts/get_accounts/
+      Handler: get_accounts.app.lambda_handler
+      Environment:
+        Variables:
+          ACCOUNTS_TABLE_NAME: !Ref AccountsTable
+          DYNAMODB_ENDPOINT: ''
+          COGNITO_USER_POOL_ID: !Ref BankingUserPool
+          COGNITO_CLIENT_ID: !Ref BankingUserPoolClient
+      Layers:
+        - !Ref PythonHelpersLambdaLayer
+        - !Ref PythonAuthenticationLambdaLayer
+      Events:
+        ApiGetAllAccountsEvent:
+          Type: Api
+          Properties:
+            Path: /accounts
+            Method: GET
+            RestApiId: !Ref BankingApiGateway
+            Auth:
+              Authorizer: CognitoAuthorizer
+        ApiGetAccountByIdEvent:
+          Type: Api
+          Properties:
+            Path: /accounts/{id}
+            Method: GET
+            RestApiId: !Ref BankingApiGateway
+            Auth:
+              Authorizer: CognitoAuthorizer
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: !Ref AccountsTable
+
   AuthFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -423,11 +462,20 @@ Resources:
       AttributeDefinitions:
         - AttributeName: accountId
           AttributeType: S
+        - AttributeName: userId
+          AttributeType: S
       BillingMode: PAY_PER_REQUEST
       PointInTimeRecoverySpecification:
         PointInTimeRecoveryEnabled: true
       SSESpecification:
         SSEEnabled: true
+      GlobalSecondaryIndexes:
+        - IndexName: UserIdIndex
+          KeySchema:
+            - AttributeName: userId
+              KeyType: HASH
+          Projection:
+            ProjectionType: ALL
       TimeToLiveSpecification:
         AttributeName: ttlTimestamp
         Enabled: true
