fix: updated code based on coderabbit suggestions

--- a/template.yml
+++ b/template.yml
@@ -259,7 +259,7 @@ Resources:
         ApiGetAccountByIdEvent:
           Type: Api
           Properties:
-            Path: /accounts/{id}
+            Path: /accounts/{account_id}
             Method: GET
             RestApiId: !Ref BankingApiGateway
             Auth:
